// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_MobileThumbnails component renders correctly 1`] = `
<div
  class="thumbnails thumbnails--touch"
>
  <div
    class="scroller"
    style="width: 172px;"
  >
    <button
      class="MuiButtonBase-root thumbnail Thumbnail Thumbnail--large"
      data-testid="default-thumbnail"
      style="background-image: url(path-to-image);"
      tabindex="0"
      type="button"
    >
      <span
        class="accessibility-text"
      >
        test alt text 1
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root thumbnail Thumbnail Thumbnail--selected Thumbnail--large"
      data-testid="default-thumbnail"
      style="background-image: url(path-to-image);"
      tabindex="0"
      type="button"
    >
      <span
        class="accessibility-text"
      >
        test alt text 2
      </span>
    </button>
  </div>
</div>
`;

exports[`_MobileThumbnails component scroll correctly 1`] = `
<div
  class="thumbnails thumbnails--touch"
>
  <div
    class="scroller"
    style="width: 172px;"
  >
    <button
      class="MuiButtonBase-root thumbnail Thumbnail Thumbnail--selected Thumbnail--large"
      style="background-image: url(path-to-image);"
      tabindex="0"
      type="button"
    >
      <span
        class="accessibility-text"
      >
        test alt text
      </span>
    </button>
    <button
      class="MuiButtonBase-root thumbnail Thumbnail Thumbnail--large"
      style="background-image: url(path-to-image);"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`_MobileThumbnails component scroll correctly when parentScrollLeft, parentOffsetWidth and offsetWidth is 0 1`] = `
<div
  class="thumbnails thumbnails--touch"
>
  <div
    class="scroller"
    style="width: 172px;"
  >
    <button
      class="MuiButtonBase-root thumbnail Thumbnail Thumbnail--selected Thumbnail--large"
      data-testid="default-thumbnail"
      style="background-image: url(path-to-image);"
      tabindex="0"
      type="button"
    >
      <span
        class="accessibility-text"
      >
        test alt text
      </span>
    </button>
    <button
      class="MuiButtonBase-root thumbnail Thumbnail Thumbnail--large"
      data-testid="default-thumbnail"
      style="background-image: url(path-to-image);"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
